<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment"
    >

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:listitem="@layout/item_tasks_list"
      />

  <com.airbnb.lottie.LottieAnimationView
      android:id="@+id/lottie_animation"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      tools:visibility="visible"
      />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/add_task_fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_marginBottom="@dimen/dp_16"
      android:layout_marginEnd="@dimen/dp_16"
      android:backgroundTint="?colorAccent"
      android:contentDescription="@string/add_task"
      android:src="@drawable/id_add_24"
      app:tint="?colorSurface"
      />
</FrameLayout>