<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

  <EditText
      android:id="@+id/tasks_name_et"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_16"
      android:layout_marginStart="@dimen/dp_16"
      android:layout_marginTop="@dimen/dp_8"
      android:autofillHints="@string/enter_task_name"
      android:background="@null"
      android:hint="@string/new_task"
      android:inputType="text"
      android:textSize="@dimen/fontsize_18"
      />

  <EditText
      android:id="@+id/tasks_detail_et"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_16"
      android:layout_marginStart="@dimen/dp_16"
      android:layout_marginTop="@dimen/dp_4"
      android:autofillHints="@string/detail"
      android:background="@null"
      android:hint="@string/detail"
      android:inputType="text"
      android:textSize="@dimen/fontsize_16"
      />

  <TextView
      android:textStyle="bold"
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginBottom="@dimen/dp_16"
      android:layout_marginEnd="@dimen/dp_16"
      android:layout_marginTop="@dimen/dp_24"
      android:gravity="end"
      android:text="@string/save"
      android:textColor="?colorAccent"
      android:textSize="@dimen/fontsize_18"
      />

</LinearLayout>